--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: node_js #指定系统环境
-node_js: 11 #指定版本
+node_js: 10 #指定版本
 addons:
   ssh_known_hosts: $serverIP #指定远程服务器地址
 install:
 - npm install
 before_script:
-- npm run server:prod # 打包编译
+- npm run build # 打包编译
 script:
 - npm run test #测试用例
 
