--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ script:
 # after_script:
 #构建完毕，自动将代码分发到远程主机
 # - scp -o StrictHostKeyChecking=no ./docs/ root@$ip2:/docs
-before_install:
-- openssl aes-256-cbc -K $encrypted_ee81ad9fc488_key -iv $encrypted_ee81ad9fc488_iv
-  -in zzq_rsa.enc -out ~/.ssh/zzq_rsa -d
+# before_install:
+# - openssl aes-256-cbc -K $encrypted_ee81ad9fc488_key -iv $encrypted_ee81ad9fc488_iv
+#   -in zzq_rsa.enc -out ~/.ssh/zzq_rsa -d
