--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "tslint": "tslint --project . src/**/*.ts src/**/*.tsx",
     "tslint2": "tslint --fix . src/**/*.ts src/**/*.tsx",
     "prettier": "prettier -l ./src/**/*",
-    "server:prod": "npm run build:server && npm run build:client",
+    "build:prod": "npm run build:server && npm run build:client",
     "test": "node ./dist/mochaRunner.js"
   },
   "author": "",
