--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: node_js #指定系统环境
 node_js: 10 #指定版本
+cache: npm # 缓存依赖
 addons:
   ssh_known_hosts: $serverIP #指定远程服务器地址
-cache: npm # 缓存依赖
 install:
 - npm install
 before_script:
 - npm run build:prod # 打包编译
 script:
-- sudo npm run test #测试用例
+- npm run test #测试用例
 
 # after_script:
 #构建完毕，自动将代码分发到远程主机
