--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
+sudo: false
 language: node_js #指定系统环境
-node_js: 10 #指定版本
+node_js: #指定版本
+  - 7
+  - 8
+  - 9
+  - 10
+  - 11
 cache: npm # 缓存依赖
 addons:
   ssh_known_hosts: $serverIP #指定远程服务器地址
