--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 dist: xenial
+sudo: false
 language: node_js #指定系统环境
 node_js: #指定版本
   - 10
@@ -14,7 +15,7 @@ install:
 before_script:
 - npm run build:prod # 打包编译
 script:
-- npm run test #测试用例
+- sudo npm run test #测试用例
 
 # after_script:
 #构建完毕，自动将代码分发到远程主机
