--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ script:
 before_install:
 - openssl aes-256-cbc -K $encrypted_ee81ad9fc488_key -iv $encrypted_ee81ad9fc488_iv
   -in zzq_rsa.enc -out ~/.ssh/zzq_rsa -d
-# after_script:
+- eval "$(ssh-agent -s)"
+- chmod 600 /tmp/deploy_rsa
+- ssh-add /tmp/deploy_rsa
+after_script:
 #构建完毕，自动将代码分发到远程主机
+  - ssh-copy-id -i zzq_rsa root@$serverIP -p 22000
 # - scp -o StrictHostKeyChecking=no ./docs/ root@$ip2:/docs
