--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "npm run clear && npm run build:server && npm run build:client",
     "build:server": "cross-env NODE_ENV=production gulp",
     "build:client": "webpack --mode production",
+    "build:client2": "webpack --profile --json  >  stats.json",
+    "build:per": "webpack-bundle-analyzer stats.json",
     "pm2:start": "pm2 restart pm2.json --env production",
     "pm2:stop": "pm2 stop pm2.json",
     "clear": "rimraf dist",
@@ -25,6 +27,7 @@
     "@types/koa-router": "^7.0.40",
     "@types/mocha": "^5.2.6",
     "@types/node": "^10.14.1",
+    "@types/prettier": "^1.16.1",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
@@ -78,13 +81,13 @@
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
-    "@types/echarts": "^4.1.4",
-    "@types/prettier": "^1.16.1",
+    "@types/echarts": "^4.1.8",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "cache-loader": "^2.0.1",
     "chai": "^4.2.0",
+    "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^5.0.1",
     "css-loader": "^2.1.1",
     "eslint-plugin-react": "^7.12.4",
@@ -120,6 +123,7 @@
     "ui-component-loader": "^1.3.3",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.2.3",
     "webpack-dashboard": "^3.0.0",
     "webpack-dev-server": "^3.1.14",
