--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "mocha": "^6.0.2",
     "mochawesome": "^3.1.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "portfinder": "^1.0.20",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
     "prettier": "^1.16.4",
