--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "awilix-koa": "^3.1.0",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "cross-env": "^5.2.0",
     "draft-js": "^0.10.5",
     "draftjs-to-html": "^0.8.4",
@@ -65,6 +66,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-draft-wysiwyg": "^1.13.2",
+    "react-loadable": "^5.5.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
