--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,7 @@
     "react-hot-loader/babel",
     // "transform-runtime",
     // "transform-decorators-legacy",
+    // "@babel/plugin-syntax-dynamic-import",
     "syntax-dynamic-import",
     [
       "import",
