--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "license": "ISC",
   "main": "index.js",
   "scripts": {
+    "dev:build": "cross-env NODE_ENV=production gulp watch",
     "dev:server": "cross-env NODE_ENV=production supervisor ./dist/app.js",
-    "dev:ts": "cross-env NODE_ENV=production ts-node ./dist/app.js",
     "dev:client": "webpack-dev-server --mode development",
+    "dev:ts": "cross-env NODE_ENV=production ts-node --project ./tsconfig.node.json ./src/nodeui/app.ts",
     "build": "npm run clear && npm run build:server && npm run build:client",
     "build:server": "cross-env NODE_ENV=production gulp",
     "build:client": "webpack --mode production",
@@ -25,7 +26,6 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run tslint",
       "pre-push": "npm run tslint"
     }
   },
@@ -101,6 +101,7 @@
     "css-loader": "^2.1.1",
     "eslint-plugin-react": "^7.12.4",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "gulp-shell": "^0.7.0",
     "gulp-strip-comments": "^2.5.2",
     "gulp-typescript": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -118,6 +119,7 @@
     "react-hot-loader": "^4.8.0",
     "rimraf": "^2.6.3",
     "rollup-plugin-replace": "^2.1.0",
+    "shelljs": "^0.8.3",
     "should": "^13.2.3",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
