--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "gulp-eslint": "^5.0.0",
     "gulp-rollup": "^2.16.2",
     "gulp-watch": "^5.0.1",
+    "happypack": "^5.0.1",
     "husky": "^2.2.0",
     "inversify": "^5.0.1",
     "inversify-binding-decorators": "^4.0.0",
@@ -94,7 +95,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "cache-loader": "^2.0.1",
+    "cache-loader": "^4.1.0",
     "chai": "^4.2.0",
     "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^5.0.1",
@@ -134,7 +135,7 @@
     "uglifyjs-webpack-plugin": "^2.1.2",
     "ui-component-loader": "^1.3.3",
     "url-loader": "^1.1.2",
-    "webpack": "^4.29.6",
+    "webpack": "^4.39.2",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.2.3",
     "webpack-dashboard": "^3.0.0",
