--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,4 +1,5 @@
 {
+  // "extends": "./tsconfig.json", // 继承某个文件的配置
   // 编译选项配置
   "compilerOptions": {
     "outDir": "./dist/", // 输出目录
@@ -34,7 +35,7 @@
     // ],
     // IOC容器修饰器需要使用
     "types": [
-      "reflect-metadata","node"
+      "reflect-metadata", "node"
     ],
     // 启用VSCODE检查语法插件
     "plugins": [{
